# pdf-renderer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  docker-compose.yml  prepare_env.sh  pyproject.toml
renderer/: core.py  processor.py  settings.py  worker.py
renderer/api/: app.py  dependencies.py
renderer/api/static/: openapi_specification.yml
renderer/clients/: s3.py
renderer/database/: base.py  models.py  repositories.py
test/: test_api.py
